vlib/v/checker/tests/generic_sumtype_decl_err_b.vv
struct Just<T> {
  value T
}

struct Nothing {}

type Maybe = Nothing | Just<T>

fn main() {
}
